# gnu_libchop

./: .arch-inventory  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.ac  release.nix
build-aux/: .arch-inventory
debian/: README  changelog  control  copyright  libchop-bin.install  libchop-doc.install  libchop-guile.install  libchop0.install  rules  shlibs.local
doc/: .arch-inventory  .gitignore  Makefile.am  libchop.css  libchop.texi  web.org
guile/: .arch-inventory  Makefile.am  README  block-indexers-spec.scm  block-indexers-support.c  block-server-spec.scm  block-server-support.c  choppers-spec.scm  choppers-support.c  cipher-spec.scm  cipher-support.c  core-spec.scm  core-support.c  core-support.h  filters-spec.scm  filters-support.c  hash-spec.scm  hash-support.c  indexers-spec.scm  indexers-support.c  logs-spec.scm  logs-support.c  objects-spec.scm  objects-support.c  pre-inst-guile.in  store-browsers-spec.scm  store-browsers-support.c  store-ctors-dtors.c  store-stats-spec.scm  store-stats-support.c  stores-spec.scm  stores-support.c  stream-ctors-dtors.c  streams-spec.scm  streams-support.c  test.scm  testsuite.scm
guile-1.8/: Makefile.am  README  block-indexers-support.c  block-server-support.c  choppers-spec.scm  choppers-support.c  cipher-spec.scm  cipher-support.c  filters-support.c  hash-spec.scm  logs-spec.scm  objects-spec.scm  store-browsers-support.c  store-stats-spec.scm  stores-support.c  streams-support.c  testsuite.scm
guile/modules/: .arch-inventory
guile2/: Makefile.am  chop.scm  test-suite.scm
guile2/chop/: block-indexers.scm  choppers.scm  cipher.scm  config.in  core.scm  filters.scm  hash.scm  indexers.scm  internal.scm  objects.scm  stores.scm  streams.scm  tests.scm
guile2/srfi/: srfi-64.upstream.scm
include/: .gitignore  Makefile.am
include/chop/: .arch-inventory  block-indexers.h  block-server.h  blocks.h  buffers.h  chop.h  choppers.h  cipher.h  errors.h  filters.h  hash.h  indexer-hash-tree.h  indexers.h  logs.h  objects.h  serializable.h  store-browsers.h  store-hash-tree.h  store-stats.h  store-sunrpc-tls.h  stores.h  streams.h  sunrpc-tls.h
m4/: .arch-inventory  .gitignore  gnulib-cache.m4
po/: ChangeLog  Makevars  POTFILES.in
rpc/: .arch-inventory  Makefile.am  block_rstore.x
src/: .arch-inventory  .gitignore  Makefile.am  base32.c  block-indexer-chk.c  block-indexer-hash.c  block-indexer-integer.c  block-indexer-uuid.c  block-indexers.c  block-server.c  buffers.c  chop-errors.et  chop.c  chop.h  chopper-anchor-based.c  chopper-fixed-size.c  chopper-whole-stream.c  choppers.h  cipher.c  extract-classes.sh  filter-bzip2-unzip.c  filter-bzip2-zip.c  filter-lzo-common.c  filter-lzo-unzip.c  filter-lzo-zip.c  filter-zip-push-pull.c  filter-zlib-unzip.c  filter-zlib-zip.c  filter-zlib.c  filters.c  find-anchors.scm  gcrypt-enum-mapping.h  hash.c  indexer-hash-tree.c  indexer-tree.c  indexers.c  logs.c  store-bdb.c  store-browser-avahi.c  store-browsers.c  (+25 more)
tests/: Makefile.am
tests/features/: Makefile.am  base32.c  block-indexer-hash.c  block-indexer-integrity.c  chopper-anchor-based.c  filter-zip.c  filter-zlib.c  stream-filtered.c  stream-indexing.c
tests/include/: Makefile.am  testsuite.h
tests/interfaces/: .gitignore  Makefile.am  block-indexers.c  choppers.c  cipher.c  class-lookup.c  deserialize.c  filters.c  indexers.c  stores.c
tests/utils/: archiver  archiver-fd  backup  backup-command  block-server  lib.sh  test-key.dsa.pub  test-key.dsa.sec  test-key.rsa.pub  test-key.rsa.sec  tls-dh-params  tls-rsa-params
utils/: .arch-inventory  Makefile.am  avahi-publish.c  avahi-server.c  chop-archiver.c  chop-backup  chop-backup.in  chop-block-server.c  chop-dbus-block-server.c  chop-file.c  chop-openpgp-tool.c  chop-rcs.sh  chop-show-anchors.c  chop-show-similarities.c  chop-store-convert.c  chop-store-discover.c  chop-store-list-entries.c  chop-store-list.c  chop-vcs.in  gdbm-list-entries.c  gnutls-helper.c  gnutls-helper.h  gnutls-init-params.c  zip-helper.c
