
nobase_include_HEADERS = chop/block-server.h	\
			 chop/block_rstore.h	\
			 chop/buffers.h		\
			 chop/chop-config.h	\
			 chop/chop-errors.h	\
			 chop/chop.h		\
			 chop/choppers.h	\
			 chop/filters.h		\
			 chop/hash.h		\
			 chop/cipher.h		\
			 chop/indexers.h	\
			 chop/logs.h		\
			 chop/serializable.h	\
			 chop/store-stats.h	\
			 chop/stores.h		\
			 chop/streams.h

noinst_HEADERS = chop/block-indexers.h

# Built in `src/'.
BUILT_SOURCES = chop/block_rstore.h chop/chop-errors.h
